Fixing ychaker logo dimensions on mobile.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -100,9 +100,9 @@ header {
     @include border-radius(10px);
 
     .logo-full {
-      background-position: 13px 3px;
-      background-size:     104px 29px;
-      height:              45px;
+      background-position: 15px 3px;
+      background-size:     104px 25px;
+      height:              35px;
       top:                 90px;
       width:               125px;
     }
